implement depth-first search algorithm

--- a/src/graph/CMakeLists.txt
+++ b/src/graph/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(graph SHARED graph.h graph.c)
+set(HEADER_FILES graph.h traversal.h stack.h)
+set(SOURCE_FILES graph.c traversal.c stack.c)
+
+add_library(graph SHARED ${HEADER_FILES} ${SOURCE_FILES})
