--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -O0")
+
 enable_testing()
 
 add_subdirectory(src/graph)
