add cycle detection algorithm

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(traversal traversal.c)
-
 target_link_libraries(traversal graph)
+
+add_executable(cycle cycle.c)
+target_link_libraries(cycle graph)
